--- a/plugin.xml
+++ b/plugin.xml
@@ -58,5 +58,11 @@
          </toolbar>
       </menuContribution>
    </extension>
+   <extension
+         point="org.eclipse.ui.startup">
+      <startup
+            class="dev.kotatsu.rcptry2.startup.Startup">
+      </startup>
+   </extension>
 
 </plugin>
