--- a/plugin.xml
+++ b/plugin.xml
@@ -58,6 +58,21 @@
             </command>
          </toolbar>
       </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:org.eclipse.ui.navigator.ProjectExplorer#PopupMenu?before=group.edit">
+         <command
+               commandId="dev.kotatsu.rcptry2.commands.flashCommand"
+               label="Flash hex"
+               style="push">
+			   <visibleWhen checkEnabled="false">
+			       <iterate ifEmpty="false" operator="or">
+			           <test property="org.eclipse.core.resources.name" value="*hex"></test>
+			       </iterate>
+		       </visibleWhen>
+         </command>
+
+      </menuContribution>
    </extension>
    <extension
          point="org.eclipse.ui.startup">
